{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 11,
  "lineage": "47299b1a-e0af-34c6-dc04-292276a0fded",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-830c94e3",
            "arn": "arn:aws:ec2:us-west-2:842675999859:instance/i-04a8d8883e59b35e8",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04a8d8883e59b35e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06fd4d64a01699433",
            "private_dns": "ip-10-10-2-144.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0d5095f888aeedfc5",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086225d67d7b42adf",
            "tags": {
              "Name": "private-instance"
            },
            "tags_all": {
              "Name": "private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05acf93ef04dd51a6"
            ]
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-830c94e3",
            "arn": "arn:aws:ec2:us-west-2:842675999859:instance/i-07ae76fa20fdcb911",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ae76fa20fdcb911",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d5133c684a9bd226",
            "private_dns": "ip-10-10-1-193.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.193",
            "public_ip": "34.221.67.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-03e50103b3fdcd490",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0498ccee9d951066c",
            "tags": {
              "Name": "public-instance"
            },
            "tags_all": {
              "Name": "public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05acf93ef04dd51a6"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842675999859:internet-gateway/igw-0694911d8747ca00c",
            "id": "igw-0694911d8747ca00c",
            "owner_id": "842675999859",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-061dc468099a870ab"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842675999859:route-table/rtb-0df107ea68c8ed719",
            "id": "rtb-0df107ea68c8ed719",
            "owner_id": "842675999859",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-061dc468099a870ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842675999859:route-table/rtb-0ebe25d6a1ae56f07",
            "id": "rtb-0ebe25d6a1ae56f07",
            "owner_id": "842675999859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0694911d8747ca00c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-061dc468099a870ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ef12ab2f0b6b814",
            "route_table_id": "rtb-0df107ea68c8ed719",
            "subnet_id": "subnet-086225d67d7b42adf"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e877a670ee0f880b",
            "route_table_id": "rtb-0ebe25d6a1ae56f07",
            "subnet_id": "subnet-0498ccee9d951066c"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842675999859:subnet/subnet-086225d67d7b42adf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086225d67d7b42adf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842675999859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-061dc468099a870ab"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842675999859:subnet/subnet-0498ccee9d951066c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0498ccee9d951066c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "842675999859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-061dc468099a870ab"
          },
          "dependencies": [
            "aws_vpc.demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842675999859:vpc/vpc-061dc468099a870ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b8e8c997fcfb5655",
            "default_route_table_id": "rtb-0102617dc4a300d64",
            "default_security_group_id": "sg-05acf93ef04dd51a6",
            "dhcp_options_id": "dopt-0379784eade81c2f3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-061dc468099a870ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0102617dc4a300d64",
            "owner_id": "842675999859",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}